test/log/store/vstcb1in0_v_u16.txt
vstcb1in0_v_u16.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vstcb1in0_v_u16.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vstcb1in0_v_u16.c:37:73: error: expected declaration specifiers or '...' before ')' token
   37 | void vstcb1in0_v_u16_golden(uint16_t *base,uint16_t *value,uint32_t imm,) {
      |                                                                         ^
vstcb1in0_v_u16.c: In function 'main':
vstcb1in0_v_u16.c:63:5: warning: implicit declaration of function 'vstcb1in0_v_u16_golden'; did you mean 'vstcb1in0_v_u16_m'? [-Wimplicit-function-declaration]
   63 |     vstcb1in0_v_u16_golden(exp_base,exp_value,exp_imm,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~
      |     vstcb1in0_v_u16_m
vstcb1in0_v_u16.c:63:55: error: 'exp_result' undeclared (first use in this function)
   63 |     vstcb1in0_v_u16_golden(exp_base,exp_value,exp_imm,exp_result);
      |                                                       ^~~~~~~~~~
vstcb1in0_v_u16.c:63:55: note: each undeclared identifier is reported only once for each function it appears in
vstcb1in0_v_u16.c:69:9: error: 'i' undeclared (first use in this function)
   69 |     for(i=0;i<ELE_NUM;i++) {
      |         ^
vstcb1in0_v_u16.c:46:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   46 |     uint32_t imm;
      |              ^~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vstcb1in0_v_u16.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vstcb1in0_v_u16"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vstcb1in0_v_u16.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vstcb1in0_v_u16.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed